[gd_scene load_steps=24 format=3 uid="uid://cbjrpkcvdo23b"]

[ext_resource type="Script" path="res://scripts/enemy_Skeleton.gd" id="1_g4gni"]
[ext_resource type="Texture2D" uid="uid://d1pxn60hbwymw" path="res://ASS/characters/Monsters_Creatures_Fantasy/Mushroom/Death.png" id="2_frrpy"]
[ext_resource type="Texture2D" uid="uid://r1dleqmdt5ci" path="res://ASS/characters/Monsters_Creatures_Fantasy/Mushroom/Run.png" id="4_c0eoy"]
[ext_resource type="PackedScene" uid="uid://cg1a7rl5l55ff" path="res://scenes/hurt_box.tscn" id="5_osdb1"]
[ext_resource type="PackedScene" uid="uid://c75ho1rxo3fbn" path="res://scenes/hit_box.tscn" id="6_lmd8w"]
[ext_resource type="AudioStream" uid="uid://c46r0skt7hlcy" path="res://ASS/sounds/step-skeleton-47785.mp3" id="7_0mb48"]
[ext_resource type="AudioStream" uid="uid://lj36n1jr1jh6" path="res://ASS/sounds/skeleton-death-made-with-Voicemod.mp3" id="8_ebpl0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ojg0u"]
atlas = ExtResource("2_frrpy")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3qv4"]
atlas = ExtResource("2_frrpy")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsfo3"]
atlas = ExtResource("2_frrpy")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oey27"]
atlas = ExtResource("2_frrpy")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfh85"]
atlas = ExtResource("4_c0eoy")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x0ap"]
atlas = ExtResource("4_c0eoy")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q7gv"]
atlas = ExtResource("4_c0eoy")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2bq0"]
atlas = ExtResource("4_c0eoy")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh1fh"]
atlas = ExtResource("4_c0eoy")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tglmp"]
atlas = ExtResource("4_c0eoy")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvw5c"]
atlas = ExtResource("4_c0eoy")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6n1d"]
atlas = ExtResource("4_c0eoy")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0flt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojg0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3qv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsfo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oey27")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfh85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x0ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q7gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2bq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh1fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tglmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvw5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6n1d")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_81twl"]
radius = 4.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs7uv"]
size = Vector2(14, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h1ic"]
size = Vector2(12, 21)

[node name="enemy_Mushroom" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_g4gni")
knockBack_recovery = 10.0
experience = 3
damage = 3
hp = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.62, 0.57)
sprite_frames = SubResource("SpriteFrames_a0flt")
animation = &"death"
frame_progress = 0.220838

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2(0.5, 6)
shape = SubResource("CapsuleShape2D_81twl")

[node name="hurtBox" parent="." instance=ExtResource("5_osdb1")]
collision_mask = 4
hrutbBoxType = 1

[node name="CollisionShape2D" parent="hurtBox" index="0"]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_fs7uv")

[node name="hitBox" parent="." instance=ExtResource("6_lmd8w")]
collision_layer = 2

[node name="CollisionShape2D" parent="hitBox" index="0"]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_4h1ic")

[node name="sound_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_0mb48")
volume_db = -20.205

[node name="death_delay" type="Timer" parent="."]
wait_time = 0.371
one_shot = true

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ebpl0")
volume_db = -22.667

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="hurt" from="hurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="death_delay" to="." method="_on_death_delay_timeout"]

[editable path="hurtBox"]
[editable path="hitBox"]
